@@ -1,4 +1,5 @@
 Release 1.3 - 03/19/2012
+ - Added support for color coding characters / bytes.
  - Rewrote ssterm in Python 2 for ease of future extensibility and
    maintenance.
  - Upgraded license from GPLv2 to GPLv3.
